Error hadling and byte modifying utils implemented.

--- a/builds/msvc2019/Zv3D/Zv3DCoreStaticLib/Zv3DCoreStaticLib.vcxproj
+++ b/builds/msvc2019/Zv3D/Zv3DCoreStaticLib/Zv3DCoreStaticLib.vcxproj
@@ -156,7 +156,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DAssert.h" />
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DBaseTypes.h" />
+    <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DByteUtils.h" />
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DCompiler.h" />
+    <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DError.h" />
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DIntDefs.h" />
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DPlatform.h" />
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DStaticSingleton.h" />
@@ -166,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\src\Core\Common\Zv3DAssert.cpp" />
+    <ClCompile Include="..\..\..\..\src\Core\Common\Zv3DError.cpp" />
     <ClCompile Include="..\..\..\..\src\Core\Test\Zv3DTestUtils.cpp" />
     <ClCompile Include="..\..\..\..\Zv3DCore\stdafx.cpp" />
   </ItemGroup>
