--- a/builds/msvc2019/Zv3D/Zv3DCoreStaticLib/Zv3DCoreStaticLib.vcxproj.filters
+++ b/builds/msvc2019/Zv3D/Zv3DCoreStaticLib/Zv3DCoreStaticLib.vcxproj.filters
@@ -60,9 +60,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Zv3DCore\stdafx.h">
-      <Filter>Header Files\Core</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DAssert.h">
       <Filter>Header Files\Core\Common</Filter>
     </ClInclude>
@@ -108,11 +105,17 @@
     <ClInclude Include="..\..\..\..\inc\Core\MathLib\Zv3DMathSmallUtils.h">
       <Filter>Header Files\Core\MathLib</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\inc\Core\Containers\Zv3DDynamicArray.h">
+      <Filter>Header Files\Core\Containers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\inc\Core\Containers\Zv3DString.h">
+      <Filter>Header Files\Core\Containers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\inc\Core\Common\Zv3DStringUtils.h">
+      <Filter>Header Files\Core\Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Zv3DCore\stdafx.cpp">
-      <Filter>Source Files\Core</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\Core\Common\Zv3DAssert.cpp">
       <Filter>Source Files\Core\Common</Filter>
     </ClCompile>
@@ -127,6 +130,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\Core\Memory\Zv3DSimpleMemoryAllocator.cpp">
       <Filter>Source Files\Core\Memory</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\Core\Common\Zv3DStringUtils.cpp">
+      <Filter>Source Files\Core\Common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
